[package]
name = "vismatch-svc"
version = "0.1.0"
edition = "2024"

[dependencies]

num-traits = "0.2"

image = "0.24"
imagehash = "0.3"
ndarray = "0.17"
walkdir = "2.5"
bincode = {version = "2", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
itertools = "0.14"
tokio = {version = "1.48", features = ["full"]}
serde_json = "1.0.145"
base64 = "0.22.1"
#img_hash = "3"